--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Stack Overview</string>
     <string name="hint_search">Search</string>
+    <string name="error_no_connection">Internet connection is not available</string>
+    <string name="error_no_connection_button_label">Settings</string>
 </resources>
