--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">Stack Overview</string>
     <string name="hint_search">Search</string>
-    <string name="error_no_connection">Internet connection is not available</string>
+    <string name="error_no_connection">Remote connection failed</string>
     <string name="error_no_connection_button_label">Settings</string>
 
     <string name="search_results_item_answers">%1$d answer</string>
     <string name="search_results_item_answers_plural">%1$d answers</string>
     <string name="search_results_item_votes">%1$d vote</string>
     <string name="search_results_item_votes_plural">%1$d votes</string>
+    <string name="answer_accepted">Answer is accepted</string>
+
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, vel te clita noster electram. Ex mea delectus maluisset. Et vide sonet viris duo, per facilis constituam ut, nisl vidit audire eos at. Cum quem persecuti temporibus ex, ut laudem electram pri, cu eos dictas omnium doctus. Dicam apeirian periculis ad vim, quo latine menandri at, tibique placerat ne has. No vel labitur referrentur.</string>
 </resources>
