Implemented UI for user's bookmarks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="search_results_item_votes_plural">%1$d votes</string>
     <string name="answer_accepted">Answer is accepted</string>
 
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, vel te clita noster electram. Ex mea delectus maluisset. Et vide sonet viris duo, per facilis constituam ut, nisl vidit audire eos at. Cum quem persecuti temporibus ex, ut laudem electram pri, cu eos dictas omnium doctus. Dicam apeirian periculis ad vim, quo latine menandri at, tibique placerat ne has. No vel labitur referrentur.</string>
+    <string name="mi_favorite">Favorite</string>
 </resources>
