Implemented Admob banners on the first screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="answer_accepted">Answer is accepted</string>
 
     <string name="mi_favorite">Favorite</string>
+
+    <string name="ads_id">ca-app-pub-3940256099942544~3347511713</string>
 </resources>
