--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
 
     <string name="widget_icon_eye">Views</string>
     <string name="widget_icon_comments">Comments</string>
+    <string name="widget_tap_to_refresh">Tap to refresh...</string>
 </resources>
